--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "puppybowl_rtkquery",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "serve": "nodemon server",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
+    "express": "^4.18.3",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0"
@@ -23,6 +29,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prisma": "^5.10.2",
     "vite": "^5.1.4"
   }
 }
